--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-camel.main.routesIncludePattern=routes/*.camel.yaml
+camel.main.routesIncludePattern=classpath:/routes/*.camel.yaml
 quarkus.http.port=8080
-quarkus.native.container-build=true
+quarkus.native.resources.include=routes/*.camel.yaml
